Fixed MDEV-4551: mysqldump --dump-slave fails with multi-source replication

When running with multi-source enabled master (MariaDB 10.0) all master will be recorded

mysql-test/r/rpl_mysqldump_slave.result:
  Updated results to new syntax